--- a/src/components/Buttons/AddNewButton/addbutton.css
+++ b/src/components/Buttons/AddNewButton/addbutton.css
@@ -2,5 +2,7 @@
     background-color: rgb(41, 154, 29);
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 32px;
+    /* font-size: 32px; */
+    width: 100%;
+    height:100% ;
 }
