--- a/src/components/Buttons/AddNewButton/addbutton.css
+++ b/src/components/Buttons/AddNewButton/addbutton.css
@@ -1,8 +1,18 @@
 .btn{
     background-color: rgb(41, 154, 29);
+    /* color: white; */
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-size: 32px; */
+    width: 100%;
+    height:100% ;
+}
+.btn:hover{
+    background-color: rgb(41, 154, 29);
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     /* font-size: 32px; */
     width: 100%;
     height:100% ;
+    border-radius: 20px;
+
 }
