--- a/src/components/Buttons/AddNewButton/addbutton.css
+++ b/src/components/Buttons/AddNewButton/addbutton.css
@@ -3,7 +3,7 @@
     /* color: white; */
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     /* font-size: 32px; */
-    width: 100%;
+    width: 10%;
     height:100% ;
 }
 .btn:hover{
@@ -11,8 +11,54 @@
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     /* font-size: 32px; */
-    width: 100%;
+    width: 10%;
     height:100% ;
     border-radius: 20px;
 
 }
+
+
+
+.btn-save{
+    background-color: rgb(13, 255, 0);
+    /* color: white; */
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-size: 32px; */
+    width: 20%;
+    height:100% ;
+}
+.btn-save:hover{
+    background-color: rgb(26, 255, 0);
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-size: 32px; */
+    width: 20%;
+    height:100% ;
+    border-radius: 20px;
+
+}
+
+
+
+.btn-cancel{
+    background-color: rgb(255, 225, 0);
+    /* color: white; */
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-size: 32px; */
+    width: 20%;
+    height:100% ;
+}
+.btn-canel:hover{
+    background-color:rgb(255, 225, 0);
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-size: 32px; */
+    width: 20%;
+    height:100% ;
+    border-radius: 20px;
+
+}
+
+
+
+
